EN-15392: Fix animation problems with filter bar wrapping (#5037)
* EN-15392: Only animate filters as they are added

* EN-15392: Collapsing filter bar keeps number of visible filters stable

* EN-15392: Calculate toggle length with lodash

--- a/common/components/FilterBar/index.scss
+++ b/common/components/FilterBar/index.scss
@@ -83,7 +83,7 @@ $filter-bar-container-padding: 20px;
   }
 
   .visible-filters-container,
-  .collapsed-filter-container {
+  .collapsed-filters-container {
     .filters-enter {
       .filter-control-toggle,
       .filter-config-toggle {
